Add zoom button layer and refactor zoom handling in map view (#433)